compiler/testData/cli/jvm/unsupportedTypeAlias.out
compiler/testData/cli/jvm/unsupportedTypeAlias.kt:3:1: error: the feature "type aliases" is only available since 1.1 language version
typealias Unused = String
^
COMPILATION_ERROR